--- a/index.css
+++ b/index.css
@@ -2,26 +2,38 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    color: #6e4d35;
 }
-
+body{
+    font-family: 'Comic Sans MS', 'Segoe UI', sans-serif;
+}
 /* font sizes and spacing */
 h1{ 
     font-size: 2em;
     line-height: 2;
+    Color: #595d3d;
+    font-family: 'Segoe UI', sans-serif;
+    
 }
 h2{
     font-size: 1.5em;
     line-height: 1.7;
+    Color: #595d3d;
+    font-family: 'Segoe UI', sans-serif;
 }
 h3{
     font-size: 1.17em;
     line-height: 1.5;
+    Color: #595d3d;
+    font-family: 'Segoe UI', sans-serif;
 }
-p{
+p, a{
     font-size: 1em;
     line-height: 1.3;
+    Color: #6e4d35;
 }
 footer{
     font-size: 0.75em;
     line-height: 1.1;
+    Color: #6e4d35;
 }
