--- a/index.css
+++ b/index.css
@@ -49,6 +49,7 @@ ul{
 nav{
     position: sticky;
     position: -webkit-sticky;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -99,13 +100,12 @@ footer{
 #About_me, .influence{
   display: grid;
   margin: 0 2em;
-  grid-template-rows: repeat(2, 1fr);      
+  grid-template-rows: repeat(1, 1fr);      
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1.5em;
 }
 #About_me{
     grid-template-areas: 
-    "ai at"
     "ai at";
 }
 /* inspirations */
@@ -118,7 +118,6 @@ footer{
 }
 .influence{
     grid-template-areas: 
-    "ii it"
     "ii it";
 }
 #jac{
@@ -137,13 +136,16 @@ footer{
     display: grid;
     margin: 0 2em;
     grid-template-rows: repeat(4, 1fr);      
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-gap: 1.5em;
     grid-template-areas: 
-    "A A"
-    "B B"
-    "C C"
-    "D D";
+    "A"
+    "B"
+    "C"
+    "D";
+}
+.influence img{
+    max-height: 100%;
 }
 /*contact*/
 #contact{
@@ -154,6 +156,7 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
 }
 #contact_submit{
     display: flex;
@@ -178,5 +181,62 @@ footer{
 }
 textarea{
     width: 100%;
+    max-width: 100%;
     max-height: 5em;
+}
+input, select{
+    max-width: 40em;
+    padding: 0.5em;
+    border-radius: 1em;
+}
+/* images */
+img{
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+@media(max-width: 590px){
+    #About_me, .influence{
+        display: grid;
+        margin: 0;
+        grid-template-rows: 1fr 2fr;      
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .influence{
+        grid-template-areas: 
+        "ii"
+        "it";
+    }
+    #About_me{
+        grid-template-areas: 
+        "ai"
+        "at";
+    }
+    #multi_platform{
+        margin-top: 5em;
+    }
+    #About_me img{
+        margin-bottom: -7em;
+    }
+    #index_footer{
+        margin-top: -5em;
+    }
+    #nav_links{
+        flex-wrap: wrap;
+    }
+    #nav_links li{
+        display: inline-block;
+        margin: 1em;
+    }
+    footer{
+        flex-wrap: wrap;
+    }
+}
+@media(min-width: 590px) and (max-width: 1070px){
+    img{
+        display: flex;
+        align-self: center;
+    }
 }
