--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,6 @@ h1{
     line-height: 2;
     Color: #595d3d;
     font-family: 'Segoe UI', sans-serif;
-    
 }
 h2{
     font-size: 1.5em;
@@ -28,7 +27,7 @@ h3{
     Color: #595d3d;
     font-family: 'Segoe UI', sans-serif;
 }
-p, a{
+p{
     font-size: 1em;
     line-height: 1.3;
     Color: #6e4d35;
@@ -41,7 +40,10 @@ footer{
 /* standard styling */
 a{
     text-decoration: none;
-
+    color: #595d3d;
+}
+.inline-link{
+    text-decoration: underline;
 }
 ul{
     list-style-type: none;
@@ -81,6 +83,7 @@ nav{
 article{
     padding: 1em;
     background-color: #f0f1f6;
+    border-radius: 2em;
 }
 /* footer */
 footer{
@@ -102,24 +105,43 @@ footer{
     flex: 1;
 }
 /* index */
-#About_me img{
-    grid-area: ai;
+#self_portrait{
+    grid-area: s;
+    justify-self: center;
 }
-#About_me_text{
-    grid-area: at;
+#introduction_text{
+    grid-area: i;
     margin: auto;
 }
-#About_me, .influence{
+#technologies_text{
+    grid-area: t;
+    margin: auto;
+}
+#technologies_text > ul{
+    text-align: center;
+}
+#education_text{
+    grid-area: e;
+    margin: auto;
+}
+#about_me{
   display: grid;
   margin: 0 2em;
-  grid-template-rows: repeat(1, 1fr);      
+  grid-template-rows: repeat(2, 1fr);      
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 1.5em;
-}
-#About_me{
-    grid-template-areas: "ai at";
+  grid-template-areas: 
+  'i s'
+  'e t';
 }
 /* inspirations */
+.influence{
+    display: grid;
+    margin: 0 1em;
+    grid-template-rows: repeat(1, 1fr);      
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1em;
+}
 .influence img{
     grid-area: ii;
 }
