--- a/styles/index.css
+++ b/styles/index.css
@@ -48,6 +48,23 @@ a{
 ul{
     list-style-type: none;
 }
+button{
+    padding: 1em;
+    border-radius: 2em;
+    background-color: #6e4d35;
+}
+a button{
+    color: #eeceb8;
+    margin-left: auto;
+    margin-right: auto;
+}
+button:hover{
+    cursor: pointer;
+    background-color: #b4b5a7;
+}
+a button:hover{
+    color: #595d3d;
+}
 /* navbar */
 nav{
     position: sticky;
@@ -149,10 +166,16 @@ footer{
 .project_text{
     grid-area: it;
     margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 .project{
     grid-template-areas: 
     "ii it";
+}
+.repository-link{
+    margin-top: 1em;
+    align-self: center;
 }
 #steel_hostilities{
     grid-area: sh;
